--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "socket.io-client": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
